ags (1.4.33)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing includes of pthread.h
	* fixed possible concurrent access to ags_route_dssi_audio_run.c and ags_route_lv2_audio_run.c
	* TODO:JK: fixed all ags_*_get_type() to use atomic operations

ags (1.4.32)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reworked CoreAudio output
	* improved mutex locks in ags_navigation_callbacks.c
	* improved midi2xml.1.xml to do file attribution
	* improved midi2xml to output usage as no parameter was given
	* fixed wrong loop condition in ags_apply_presets.c
	* fixed unsafe reference count in ags_audio.c and ags_channel.c
	* fixed wrong reference count in ags_recycling_context.c
	* fixed AgsSeekSoundcard to use recall context
	* fixed AgsSeekSoundcard to use correct mutex variable

ags (1.4.31)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* disabled GLib-GObject fatal mask

ags (1.4.30)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong if statement in ags_route_dssi_audio_run.c causing DSSI silence
	* fixed potential SIGSEGV related to AgsRecyclingContext wrong ref count

ags (1.4.29)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed timestamp offset clipboard insert
	* fixed missing timestamp of notation

ags (1.4.28)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed integrity check of ags_recall_lv2_load()
	* fixed selection of notation region

ags (1.4.27)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing timestamp information in AgsAutomation clipboard
	* fixed if statement in ags_automation_find_specifier_with_type_and_line()
	* fixed missing return in ags_automation_get_value()
	* minor improvements

ags (1.4.26)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed wrong ref count in ags_automation.c
	* fixed wrong ref count in ags_notation.c