@@ -806,6 +806,7 @@ ags_play_lv2_audio_run_run_init_pre(AgsRecall *recall)
   
   gchar *path;
 
+  guint lv2_plugin_flags;
   guint play_lv2_audio_flags;
   guint output_lines, input_lines;
   guint audio_channel;
@@ -817,6 +818,7 @@ ags_play_lv2_audio_run_run_init_pre(AgsRecall *recall)
   pthread_mutex_t *soundcard_mutex;
   pthread_mutex_t *audio_mutex;
   pthread_mutex_t *recall_mutex;
+  pthread_mutex_t *base_plugin_mutex;
   
   mutex_manager = ags_mutex_manager_get_instance();
   application_mutex = ags_mutex_manager_get_application_mutex(mutex_manager);
@@ -876,6 +878,20 @@ ags_play_lv2_audio_run_run_init_pre(AgsRecall *recall)
   
   pthread_mutex_unlock(recall_mutex);
   
+  /* base plugin mutex */
+  pthread_mutex_lock(ags_base_plugin_get_class_mutex());
+
+  base_plugin_mutex = AGS_BASE_PLUGIN(dssi_plugin)->obj_mutex;
+  
+  pthread_mutex_unlock(ags_base_plugin_get_class_mutex());
+
+  /* get some fields */
+  pthread_mutex_lock(base_plugin_mutex);
+
+  lv2_plugin_flags = lv2_plugin->flags;
+  
+  pthread_mutex_unlock(base_plugin_mutex);
+
   /* set up feature */
   play_lv2_audio_run->input = (float *) malloc(input_lines *
 					       buffer_size *
@@ -896,47 +912,81 @@ ags_play_lv2_audio_run_run_init_pre(AgsRecall *recall)
 
   /* can't be done in ags_play_lv2_audio_run_run_init_inter since possebility of overlapping buffers */
   /* connect audio port */
-  pthread_mutex_lock(recall_mutex);
-
   for(i = 0; i < input_lines; i++){
+    uint32_t port_index;
+
+    pthread_mutex_lock(recall_mutex);
+
+    port_index = play_lv2_audio->input_port[i];
+
+    pthread_mutex_unlock(recall_mutex);
+    
 #ifdef AGS_DEBUG
     g_message("connect port: %d", play_lv2_audio->input_port[i]);
 #endif
 
+    /* connect port */
     ags_base_plugin_connect_port(AGS_BASE_PLUGIN(lv2_plugin),
 				 play_lv2_audio_run->lv2_handle[0],
-				 play_lv2_audio->input_port[i],
+				 port_index,
 				 play_lv2_audio_run->input);
   }
 
   for(i = 0; i < output_lines; i++){
+    uint32_t port_index;
+
+    pthread_mutex_lock(recall_mutex);
+
+    port_index = play_lv2_audio->output_port[i];
+
+    pthread_mutex_unlock(recall_mutex);
+
 #ifdef AGS_DEBUG
     g_message("connect port: %d", play_lv2_audio->output_port[i]);
 #endif
     
+    /* connect port */    
     ags_base_plugin_connect_port(AGS_BASE_PLUGIN(lv2_plugin),
 				 play_lv2_audio_run->lv2_handle[0],
-				 play_lv2_audio->output_port[i],
+				 port_index,
 				 play_lv2_audio_run->output);
   }
 
   /* connect event port */
   if((AGS_PLAY_LV2_AUDIO_HAS_EVENT_PORT & (play_lv2_audio_flags)) != 0){
+    uint32_t port_index;
+
+    pthread_mutex_lock(recall_mutex);
+
+    port_index = play_lv2_audio->event_port;
+
+    pthread_mutex_unlock(recall_mutex);
+
+    /* connect port */
     play_lv2_audio_run->event_port = ags_lv2_plugin_alloc_event_buffer(AGS_PLAY_LV2_AUDIO_DEFAULT_MIDI_LENGHT);
     
     ags_base_plugin_connect_port(AGS_BASE_PLUGIN(lv2_plugin),
 				 play_lv2_audio_run->lv2_handle[0],
-				 play_lv2_audio->event_port,
+				 port_index,
 				 play_lv2_audio_run->event_port);
   }
   
   /* connect atom port */
   if((AGS_PLAY_LV2_AUDIO_HAS_ATOM_PORT & (play_lv2_audio_flags)) != 0){
+    uint32_t port_index;
+
+    pthread_mutex_lock(recall_mutex);
+
+    port_index = play_lv2_audio->atom_port;
+
+    pthread_mutex_unlock(recall_mutex);
+
+    /* connect port */
     play_lv2_audio_run->atom_port = ags_lv2_plugin_alloc_atom_sequence(AGS_PLAY_LV2_AUDIO_DEFAULT_MIDI_LENGHT);
     
     ags_base_plugin_connect_port(AGS_BASE_PLUGIN(lv2_plugin),
 				 play_lv2_audio_run->lv2_handle[0],
-				 play_lv2_audio->atom_port,
+				 ,
 				 play_lv2_audio_run->atom_port);   
   }
 
@@ -944,10 +994,8 @@ ags_play_lv2_audio_run_run_init_pre(AgsRecall *recall)
   ags_base_plugin_activate(AGS_BASE_PLUGIN(lv2_plugin),			     
 			   play_lv2_audio_run->lv2_handle[0]);
 
-  pthread_mutex_unlock(recall_mutex);
-
   /* set program */
-  if((AGS_LV2_PLUGIN_HAS_PROGRAM_INTERFACE & (lv2_plugin->flags)) != 0){
+  if((AGS_LV2_PLUGIN_HAS_PROGRAM_INTERFACE & (lv2_plugin_flags)) != 0){
     AgsPort *current;
     
     GList *list, *port;
@@ -956,8 +1004,9 @@ ags_play_lv2_audio_run_run_init_pre(AgsRecall *recall)
 
     float *port_data;
     
+    guint bank, program;
     guint port_count;
-
+    
     GValue value = {0,};
 
     g_value_init(&value,
@@ -985,13 +1034,16 @@ ags_play_lv2_audio_run_run_init_pre(AgsRecall *recall)
 
     /* change program */
     pthread_mutex_lock(recall_mutex);
+
+    bank = play_lv2_audio->bank;
+    program = play_lv2_audio->program;
+    
+    pthread_mutex_unlock(recall_mutex);
     
     ags_lv2_plugin_change_program(lv2_plugin,
     				  play_lv2_audio_run->lv2_handle,
-    				  play_lv2_audio->bank,
-    				  play_lv2_audio->program);
-
-    pthread_mutex_unlock(recall_mutex);
+    				  bank,
+    				  program);
 
     /* reset port data */
     pthread_mutex_lock(audio_mutex);
@@ -1281,8 +1333,6 @@ ags_play_lv2_audio_run_run_pre(AgsRecall *recall)
   }
   
   /* copy data */
-  pthread_mutex_lock(recycling_mutex);
-
   if(play_lv2_audio_run->output != NULL){
     ags_audio_buffer_util_copy_buffer_to_buffer(destination->stream_current->data, 1, 0,
 						play_lv2_audio_run->output, (guint) 1, 0,
